syntax = "proto3";

package requestutil;

message ForwardedRequest {
	string method = 1;
	URL url = 2;
	map<string, HeaderEntry> header_entries = 3;
	bytes body = 4;
	string host = 5;
	string remote_addr = 6;
	repeated bytes peer_certificates = 7;
}

message URL {
	string scheme = 1;
	string opaque = 2;
	// This isn't needed now but might be in the future, so we'll skip the
	// number to keep the ordering in net/url
	//UserInfo user = 3;
	string host = 4;
	string path = 5;
	string raw_path = 6;
	// This also isn't needed right now, but we'll reserve the number
	//bool force_query = 7;
	string raw_query = 8;
	string fragment = 9;
}

message HeaderEntry {
	repeated string values = 1;
}
